--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Inter:100,200,300,regular,500,600,700,800,900" rel="stylesheet" />
   <link rel="stylesheet" href="css/slick.css">
+  <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
   <link rel="stylesheet" href="css/jquery.fancybox.css">
   <link rel="stylesheet" href="css/style.css">
 </head>
@@ -107,8 +108,157 @@
           </div>
          </div>
         </div>
-        
-</section>
+  </section>
+  <section class="page__product">
+    <div class="container">
+      <div class="product__body">
+        <div class="product__title">
+          <h2 class="product__titles">Product <span>composition</span></h2>
+        </div>
+        <div class="product__link">
+          <div class="product__item">
+            <div class="product__box aloy">
+              <img src="./images/product/Aloe.svg" alt="Aloy" class="product__imgs">
+              <p class="product__text">Aloy</p>
+            </div>
+            <div class="product__box bacteria">
+              <img src="./images/product/bacteria.svg" alt="bacteria" class="product__imgs">
+              <p class="product__text">Beneficial <br> bacteria</p>
+            </div>
+            <div class="product__box plants">
+              <img src="./images/product/plants.svg" alt="plants" class="product__imgs">
+              <p class="product__text">Useful plants</p>
+            </div>
+          </div>
+          <div class="product__item lorex">
+            <div class="product__box-box">
+              <img src="./images/product/lorex.svg" alt="" class="product__imgs-img">
+            </div>
+            <div class="button__product">
+              <button href="#about" class="buttoms__product">Order a product</button>
+            </div>
+          </div>
+          <div class="product__item">
+            <div class="product__box lorem">
+              <img src="./images/product/lorem.svg" alt="Lorem" class="product__imgs">
+              <p class="product__text">Lorem</p>
+            </div>
+            <div class="product__box wax">
+              <img src="./images/product/wax.svg" alt="wax" class="product__imgs">
+              <p class="product__text">bee wax</p>
+            </div>
+            <div class="product__box vitamins">
+              <img src="./images/product/vitamins.svg" alt="vitamins" class="product__imgs">
+              <p class="product__text">vitamins</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="page__saying">
+    <div class="container">
+      <div class="saying__body">
+        <div class="saying__item">
+          <h2 class="saying__title">
+              What <span>Our Member’s</span>
+              Saying About Us
+          </h2>
+          <p class="saying__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus.</p>
+          <div class="saying__fotosman avatars">
+            <span class="avatar">
+              <img src="./images/slider/01.svg" alt="slider" class="fotosmans__link">
+            </span>
+            <span class="avatar">
+              <img src="./images/slider/02.svg" alt="slider" class="fotosmans__link">
+           </span>
+            <span class="avatar">
+              <img src="./images/slider/03.svg" alt="slider" class="fotosmans__link">
+            </span>
+            <span class="avatar">
+              <img src="./images/slider/04.svg" alt="slider" class="fotosmans__link">
+            </span>
+            <span class="avatar">
+              <img src="./images/slider/05.svg" alt="slider" class="fotosmans__link">
+            </span>
+            <span class="avatar">
+              <img src="./images/slider/06.svg" alt="slider" class="fotosmans__link">
+            </span>
+            <div class="fotosman__value">
+              <p class="value__item">100+ Reviews</p>
+            </div>
+          </div>
+        </div>
+        <div class="saying__slaider">
+          <div class="slader__item">
+            <div class="slader__box">
+              <div class="slider__header">
+                <div class="slider__name">
+                  <img src="./images/slider/07.svg" alt="" class="slader__img">
+                  <div class="slider__names-name">
+                    <h2 class="slider__names">Jane Cooper</h2>
+                    <p class="slider__data">12/4/17</p>
+                  </div>
+                </div>
+                <div class="slider__star">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                </div>
+              </div>
+              <div class="slider__box-body">
+                <p class="slider__box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus.</p>
+              </div>
+            </div>
+            <div class="slader__box">
+              <div class="slider__header">
+                <div class="slider__name">
+                  <img src="./images/slider/07.svg" alt="" class="slader__img">
+                  <div class="slider__names-name">
+                    <h2 class="slider__names">Jonh Miller</h2>
+                    <p class="slider__data">10/2/21</p>
+                  </div>
+                </div>
+                <div class="slider__star">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                </div>
+              </div>
+              <div class="slider__box-body">
+                <p class="slider__box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus.</p>
+              </div>
+            </div>
+            <div class="slader__box">
+              <div class="slider__header">
+                <div class="slider__name">
+                  <img src="./images/slider/09.svg" alt="" class="slader__img">
+                  <div class="slider__names-name">
+                    <h2 class="slider__names">Nalla Mix</h2>
+                    <p class="slider__data">25/12/22</p>
+                  </div>
+                </div>
+                <div class="slider__star">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/Star 5.svg" alt="Star" class="slider__stars">
+                  <img src="./images/slider/starnofill.svg" alt="Star" class="slider__stars">
+                </div>
+              </div>
+              <div class="slider__box-body">
+                <p class="slider__box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
 
@@ -128,6 +278,8 @@
   
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="./js/scripts.js"></script>
