--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
         <nav class="header__nav">
           <ul class="menu__items">
             <li class="nav__link"><a href="#" class="nav__items">Home</a></li>
-            <li class="nav__link"><a href="#" class="nav__items">Promo</a></li>
-            <li class="nav__link"><a href="#" class="nav__items">Composition</a></li>
-            <li class="nav__link"><a href="#" class="nav__items">Reviews</a></li>
-            <li class="nav__link"><a href="#" class="nav__items">Reviews</a></li>
+            <li class="nav__link"><a href="#promo" class="nav__items">Promo</a></li>
+            <li class="nav__link"><a href="#compo" class="nav__items">Composition</a></li>
+            <li class="nav__link"><a href="#revi" class="nav__items">About</a></li>
+            <li class="nav__link"><a href="#about" class="nav__items">Reviews</a></li>
           </ul>
         </nav>
         <div class="buttom__header">
-          <button href="#about" class="header__buttoms">Order a product</button>
+          <a href="#about" class="header__buttoms">Order a product</a>
         </div>
       </div>
     </div>
@@ -45,7 +45,7 @@
           </h1>
           <p class="levelup__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem velit viverra amet faucibus.</p>
            <div class="buttom__header">
-                <button href="#about" class="header__buttoms">Order a product</button>
+                <a href="#about" class="header__buttoms">Order a product</a>
            </div>
         </div>
         <div class="levelup__right">
@@ -72,7 +72,7 @@
       </div>
     </div>
   </section>
-  <section class="character">
+  <section class="character" id="promo">
         <div class="video-wrapper">
           <video playsinline autoplay muted loop poster="cake.jpg">
               <source src="./images/bg-characterv3.mp4" type="video/mp4">
@@ -109,7 +109,7 @@
          </div>
         </div>
   </section>
-  <section class="page__product">
+  <section class="page__product" id="compo">
     <div class="container">
       <div class="product__body">
         <div class="product__title">
@@ -135,7 +135,7 @@
               <img src="./images/product/lorex.svg" alt="" class="product__imgs-img">
             </div>
             <div class="button__product">
-              <button href="#about" class="buttoms__product">Order a product</button>
+              <a href="#about" class="buttoms__product">Order a product</a>
             </div>
           </div>
           <div class="product__item">
@@ -156,7 +156,7 @@
       </div>
     </div>
   </section>
-  <section class="page__saying">
+  <section class="page__saying" id="revi">
     <div class="container">
       <div class="saying__body">
         <div class="saying__item">
@@ -259,6 +259,119 @@
       </div>
     </div>
   </section>
+  <section class="features">
+    <div class="container">
+     <div class="features__title">
+      <h2 class="features__title-title">Product <span>features</span></h2>
+     </div>
+    <div class="features__body">
+      <div class="features_img">
+        <img src="./images/features/features1.png" alt="features" class="features__imgs">
+      </div>
+      <div class="features__item">
+        <h2 class="features__titles"><span>LevelUp</span> - Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2>
+        <div class="features__accordion">
+        <div class="box-title">lorem</div>
+        <div class="box-content">
+            <h2 class="book__title">lorem</h2>
+            <p class="book__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque non, consequuntur esse sapiente nihil facere, molestiae minima odio laborum mollitia cumque voluptas veniam minus! Molestiae sequi adipisci unde dignissimos quibusdam!</p>
+            <p class="book__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis excepturi alias sit deserunt velit quod repellendus tenetur quam id consequuntur rerum quas earum officia, delectus quia unde sapiente, doloribus quis.</p>
+            <p class="book__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis excepturi alias sit deserunt velit quod repellendus tenetur quam id consequuntur rerum quas earum officia, delectus quia unde sapiente, doloribus quis.</p>
+            <p class="book__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis excepturi alias sit deserunt velit quod repellendus tenetur quam id consequuntur rerum quas earum officia, delectus quia unde sapiente, doloribus quis.</p>
+            <p class="book__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis excepturi alias sit deserunt velit quod repellendus tenetur quam id consequuntur rerum quas earum officia, delectus quia unde sapiente, doloribus quis.</p>
+            <p class="book__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis excepturi alias sit deserunt velit quod repellendus tenetur quam id consequuntur rerum quas earum officia, delectus quia unde sapiente, doloribus quis.</p>
+            <p class="book__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis excepturi alias sit deserunt velit quod repellendus tenetur quam id consequuntur rerum quas earum officia, delectus quia unde sapiente, doloribus quis.</p>
+            <p class="book__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis excepturi alias sit deserunt velit quod repellendus tenetur quam id consequuntur rerum quas earum officia, delectus quia unde sapiente, doloribus quis.</p>
+            <h2 class="book__title">Lorem</h2>
+        </div>
+        <div class="box-title">Lorem</div>
+        <div class="box-content">
+            <h2 class="book_-title">Lorem</h2>
+            <p class="book__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptatem sint, sed earum est, rerum magnam commodi ipsum blanditiis aliquam quo molestias soluta iste, accusamus omnis maiores error voluptate quis.</p>
+            <p class="book__text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptatem sint, sed earum est, rerum magnam commodi ipsum blanditiis aliquam quo molestias soluta iste, accusamus omnis maiores error voluptate quis.</p>
+        </div>
+        <div class="box-title">Lorem</div>
+        <div class="box-content">
+            <h2 class="book_-title">Lorem</h2>
+            <p class="book__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Deleniti, alias. Facere et corporis suscipit qui voluptates est optio corrupti odio necessitatibus non, cum quisquam consequuntur unde ipsa vero quod repellendus.</p>
+            <p class="book__text">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur exercitationem et, sequi nulla quibusdam adipisci deleniti rem qui corrupti a dolor excepturi quae, deserunt placeat, sit saepe distinctio voluptas voluptate!</p>
+        </div>
+    </div>
+        </div>
+      </div>
+    </div> 
+    </div>
+  </section>
+  <section class="about" id="about">
+    <div class="container">
+      <div class="about__body">
+        <div class="about__item">
+          <div class="about__title">
+            <h2 class="about__title-title">LevelUp</h2>
+          </div>
+          <div class="about__timer">
+            <div class="about__app" id="app"></div>
+          </div>
+        </div>
+        <div class="about__about-inputes">
+          <div class="about__input">
+            <input type="text" class="about__name" placeholder="Ваше имя">
+            <p class="input__save">Иван Иванович</p>
+            <input type="tel" class="about__tel" pattern="[\+]\d{1}\s[\(]\d{3}[\)]\s\d{3}[\-]\d{2}[\-]\d{2}" minlength="18" maxlength="18"  placeholder="Номер телефона">
+            <p class="input__save-tel">+12345465898</p>
+            <input type="email" class="about__email" placeholder="E-mail адрес">
+            <div class="buttom_-abouts">
+              <button class="about__buttom">Leave a request</button>
+              <button class="about__buttom buy">
+                <div class="price__body">
+                <div class="price">
+                  <p class="price-old">1287р.</p>
+                  <p class="price-now animate-charcter">800р.</p>
+                </div>
+                <div class="buy__price">
+                  <p class="buy__tilte">Buy</p> 
+                </div>
+                </div>
+              </button>
+            </div>
+            </div>
+          <div class="about__img">
+            <img src="./images/about/01.svg" alt="about" class="about__imgs">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="footer">
+    <div class="container">
+      <div class="footer__body">
+        <div class="footer__logos">
+          <div class="img footer__logo"><a href="#"><img src="./images/footer/logo.svg" alt="footer" class="logo_logo"></a></div>
+          <p class="footer__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nec risus feugiat lectus risus sed ullamcorper. Auctor semper fermentum</p>
+          <p class="footer__text2">volutpat integer vel. In rhoncus elementum nunc, malesuada mi sed. Nibh est sit lobortis id semper.</p>
+          <div class="footer__sochial">
+            <img src="./images/footer/facebook.svg" alt="facebook" class="sochial__img">
+            <img src="./images/footer/instagramm.svg" alt="instagramm" class="sochial__img">
+            <img src="./images/footer/twitter.svg" alt="twitter" class="sochial__img">
+          </div>
+        </div>
+        <div class="footer__useful">
+          <h2 class="useful__title">Useful Links</h2>
+          <p class="useful__text">About Us</p>
+          <p class="useful__text">Lorem</p>
+          <p class="useful__text">Our Mission</p>
+          <p class="useful__text">Our Team</p>
+      </div>
+      <div class="footer__adress">
+        <h2 class="adress__map">Address</h2>
+        <img src="./images/footer/maps.svg" alt="maps" class="map__imgs">
+      </div>
+    </div>
+    <hr>
+    <div class="footer__config">
+      <a href="" class="config__text">2022 All Right Reserved</a>
+    </div>
+  </section>
 
 
 
@@ -268,10 +381,10 @@
         <div class="menu__phone animate__animated">
             <ul class="menu__items">
                 <li class="nav__link"><a href="#" class="nav__items">Home</a></li>
-             <li class="nav__link"><a href="#" class="nav__items">Promo</a></li>
-             <li class="nav__link"><a href="#" class="nav__items">Composition</a></li>
-             <li class="nav__link"><a href="#" class="nav__items">Reviews</a></li>
-             <li class="nav__link"><a href="#" class="nav__items">Reviews</a></li>
+             <li class="nav__link"><a href="#promo" class="nav__items">Promo</a></li>
+             <li class="nav__link"><a href="#compo" class="nav__items">Composition</a></li>
+             <li class="nav__link"><a href="#revi" class="nav__items">Reviews</a></li>
+             <li class="nav__link"><a href="#about" class="nav__items">Reviews</a></li>
             </ul>
         </div>
     </div>
@@ -283,6 +396,8 @@
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.fancybox.min.js"></script>
   <script src="./js/scripts.js"></script>
+  <script src="./js/accordyon.js"></script>
+  <script src="./js/timer.js"></script>
   <script src="js/main.js"></script>
 </body>
 </html>
